--- a/Site Facima/css/index.css
+++ b/Site Facima/css/index.css
@@ -123,6 +123,41 @@ li a {
     text-decoration: none;
 }
 
+.dropdown-content {
+    position: absolute;
+    background-color: #00aeef;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+	background-color: #00aeef
+}
+
+#Div{
+    display : none;
+}
+
+#Div2{
+    display : none;
+}
+
+#Div3{
+    display : none;
+}
+
+#Div4{
+    display : none;
+}
+
 #flex-container
 {
 	position:absolute;
@@ -131,7 +166,7 @@ li a {
 	text-align: center;
 	top: 270px;
 	left: 120px;
-	right:120px;
+	right:110px;
 }
 
 .left-column
@@ -174,4 +209,3 @@ li a {
 	width: 127px;
 	height: 264px;
 }
-
