--- a/Site Facima/css/index.css
+++ b/Site Facima/css/index.css
@@ -17,6 +17,31 @@
 	
 }
 
+.cursos{
+	position: absolute;
+	left: 566px;
+	top: 208px;
+	height: 59px;
+}
+
+.informes{
+	position: absolute;
+	left: 568px;
+	top: 211px;
+}
+
+.aluno{
+	position: absolute;
+	left: 584px;
+	top: 209px;
+}
+
+.servicos_online{
+	position: absolute;
+	left: 512px;
+	top: 209px;
+}
+
 .Back{
 	position: absolute;
 	left: 0px;
@@ -123,12 +148,17 @@ li a {
     text-decoration: none;
 }
 
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: #53caf6;
+}
+
 .dropdown-content {
     position: absolute;
     background-color: #00aeef;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+	display: none;
 }
 
 .dropdown-content a {
@@ -136,26 +166,16 @@ li a {
     padding: 12px 16px;
     text-decoration: none;
     text-align: left;
+	display: block;
+	font-size:20px;
 }
 
 .dropdown-content a:hover {
-	background-color: #00aeef
+	background-color: #53caf6
 }
 
-#Div{
-    display : none;
-}
-
-#Div2{
-    display : none;
-}
-
-#Div3{
-    display : none;
-}
-
-#Div4{
-    display : none;
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 #flex-container
